Fix support paragraph

--- a/index.html
+++ b/index.html
@@ -20,14 +20,8 @@
         <a href="resources.html">Resources</a>
       </li>
       <!-- <li>
-        <a href="/">Our Work</a>
-      </li>
-      <li>
-        <a href="/">Who We Arek</a>
-      </li> -->
-      <li>
         <a href="who.html">Who We Are</a>
-      </li>
+      </li> -->
       <li>
         <a href="donate.html">Donate</a>
       </li>
@@ -64,11 +58,6 @@
           quantitative toolkit for protecting voting rights;</li>
         <li>to offer formal and informal expert <strong>consulting</strong> to stakeholders on all sides.</li>
       </ul>
-      <p class="support">The Metric Geometry and Gerrymandering Group has major support from the
-        <a href="https://tischcollege.tufts.edu/">Jonathan M. Tisch
-          College of Civic Life</a> at Tufts University and the <a href="https://bosefellows.mit.edu/">Amar G.
-          Bose Research Grant Program</a> at MIT.
-      </p>
     </article>
     <div>
       <article class="feature">
@@ -79,6 +68,12 @@
         </a>
       </article>
     </div>
+    <p class="support">The Metric Geometry and Gerrymandering Group is a nonpartisan research organization.
+      MGGG has major support from the <a href="https://tischcollege.tufts.edu/">Jonathan M. Tisch
+        College of Civic Life</a> at Tufts University and the <a href="https://bosefellows.mit.edu/">Amar G.
+        Bose Research Grant Program</a> at MIT and an active partnership with the <a href="https://lawyescommittee.org/">Lawyers'
+        Committee for Civil Rights Under Law</a>.
+    </p>
   </main>
 
   <footer>
