--- a/who.html
+++ b/who.html
@@ -42,17 +42,16 @@
   <main>
     <article>
       <h2 class="headline">Who We Are</h2>
-      <!-- <ul class="bio-list">
-        <li class="bio">
+      <!-- <li class="bio">
           <img src="static/buck.png" alt="photo of Ruth Buck">
           <strong>Ruth Buck</strong> - part-time - geography
-        </li>
-
-
-        <li class="bio">
-          <img src="static/hully.png" alt="photo of Max Hully">
-          <strong>Max Hully</strong> - software developer - geometry and analysis</li> -->
+        </li> -->
       <div class="bio-list">
+        <figure class="bio">
+          <img src="static/hully.jpg" alt="photo of Max Hully">
+          <figcaption><strong>Max Hully</strong> is the software developer for MGGG.
+          </figcaption>
+        </figure>
         <figure class="bio">
           <img src="static/deford.jpg" alt="photo of Daryl DeFord">
           <figcaption><strong><a href="http://daryldeford.com">Daryl DeFord</a></strong> is a postdoc in the group,
