--- a/who.html
+++ b/who.html
@@ -60,8 +60,13 @@
         </figure>
         <figure class="bio">
           <img src="static/duchin.jpg" alt="photo of Moon Duchin">
-          <figcaption><strong><a href="https://mduchin.math.tufts.edu">Moon Duchin</a></strong>- faculty - geometry,
-            topology, dynamical systems</figcaption>
+          <figcaption><strong><a href="https://mduchin.math.tufts.edu">Moon Duchin</a></strong> 
+            founded MGGG in 2016 to focus mathematical attention on redistricting.  
+            Her areas of mathematical expertise are in geometry,
+            topology, and dynamical systems.  Her affiliations at Tufts University
+            include <a href="http://math.tufts.edu">Mathematics</a>, 
+            <a href="http://as.tufts.edu/sts/">STS</a>, and the 
+            <a href="http://tischcollege.tufts.edu">Tisch College of Civic Life</a>.</figcaption>
         </figure>
 
         <figure class="bio">
