--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Quattrocento" rel="stylesheet">
 </head>
 
 <body>
@@ -19,13 +19,12 @@
       <li>
         <a href="resources.html">Resources</a>
       </li>
-      <!-- <li>
+      <li>
         <a href="who.html">Who We Are</a>
-      </li> -->
+      </li>
       <li>
         <a href="donate.html">Donate</a>
       </li>
-
     </ul>
   </nav>
   <header>
