--- a/who.html
+++ b/who.html
@@ -19,12 +19,9 @@
       <li>
         <a href="resources.html">Resources</a>
       </li>
-      <!-- <li>
-        <a href="/">Our Work</a>
-      </li>
       <li>
-        <a href="/">Who We Arek</a>
-      </li> -->
+        <a href="who.html">Who We Are</a>
+      </li>
       <li>
         <a href="donate.html">Donate</a>
       </li>
@@ -46,42 +43,41 @@
           <img src="static/buck.png" alt="photo of Ruth Buck">
           <strong>Ruth Buck</strong> - part-time - geography
         </li> -->
-      <div class="bio-list">
-        <figure class="bio">
-          <img src="static/hully.jpg" alt="photo of Max Hully">
-          <figcaption><strong>Max Hully</strong> is the software developer for MGGG.
-          </figcaption>
-        </figure>
-        <figure class="bio">
-          <img src="static/deford.jpg" alt="photo of Daryl DeFord">
-          <figcaption><strong><a href="http://daryldeford.com">Daryl DeFord</a></strong> is a postdoc in the group,
-            with research interests in complex networks and the mathematics of social data. He completed his Ph.D. in
-            Mathematics in 2018 at Dartmouth College under the supervision of Dan Rockmore.</figcaption>
-        </figure>
-        <figure class="bio">
-          <img src="static/duchin.jpg" alt="photo of Moon Duchin">
-          <figcaption><strong><a href="https://mduchin.math.tufts.edu">Moon Duchin</a></strong>- faculty - geometry,
-            topology, dynamical systems</figcaption>
-        </figure>
+      <dl class="bio-list">
+        <!-- <dt><img src="static/hully.jpg" alt="photo of Max Hully"></dt> -->
+        <!-- <dd><strong>Max Hully</strong> is the software developer for MGGG.</dd> -->
 
-        <figure class="bio">
-          <img src="static/kestigian.jpg" alt="photo of Aidan Kestigian">
-          <figcaption><strong><a href="https://aidankestigian.wordpress.com/">Aidan Kestigian</a></strong> is the
-            program
-            manager for MGGG, managing the group’s research, civic, and fundraising initiatives. Prior to working for
-            MGGG, Aidan was a graduate student at Carnegie Mellon University and maintains research interests in voting
-            theory and social & political philosophy.</figcaption>
-        </figure>
+        <dt><img src="static/deford.jpg" alt="photo of Daryl DeFord"></dt>
+        <dd><strong><a href="http://daryldeford.com">Daryl DeFord</a></strong> is a postdoc in the group,
+          with research interests in complex networks and the mathematics of social data. He completed his Ph.D. in
+          Mathematics in 2018 at Dartmouth College under the supervision of Dan Rockmore.</dd>
 
-        <figure class="bio">
-          <img src="static/solomon.jpg" alt="photo of Justin Solomon">
-          <figcaption><strong><a href="http://people.csail.mit.edu/jsolomon/">Justin Solomon</a></strong> leads the
-            Geometric Data Processing Group in the MIT Computer Science and Artificial Intelligence Laboratory (CSAIL),
-            which studies problems at the intersection of geometry, large-scale optimization, machine learning, and
-            applications. He joined MGGG's leadership in 2017 and is directing theoretical research and implementation
-            for algorithmic approaches to generating and analyzing districting plans.</figcaption>
-        </figure>
-      </div>
+        <dt><img src="static/duchin.jpg" alt="photo of Moon Duchin"></dt>
+
+        <dd><strong><a href="https://mduchin.math.tufts.edu">Moon Duchin</a></strong> founded MGGG in 2016 to focus
+          mathematical attention on redistricting.
+          Her areas of mathematical expertise are in geometry,
+          topology, and dynamical systems. Her affiliations at Tufts University
+          include <a href="http://math.tufts.edu">Mathematics</a>,
+          <a href="http://as.tufts.edu/sts/">STS</a>, and the
+          <a href="http://tischcollege.tufts.edu">Tisch College of Civic Life</a>.</figcaption>
+        </dd>
+        <dt><img src="static/kestigian.jpg" alt="photo of Aidan Kestigian"></dt>
+
+        <dd><strong><a href="https://aidankestigian.wordpress.com/">Aidan Kestigian</a></strong> is the program manager
+          for MGGG, managing the group’s research, civic, and fundraising initiatives. Prior to working for MGGG, Aidan
+          earned a PhD in Logic, Computation, and Methodology at Carnegie Mellon University and maintains research
+          interests in voting theory and social & political philosophy.
+        </dd>
+
+        <dt>
+          <img src="static/solomon.jpg" alt="photo of Justin Solomon"></dt>
+        <dd><strong><a href="http://people.csail.mit.edu/jsolomon/">Justin Solomon</a></strong> leads the
+          Geometric Data Processing Group in the MIT Computer Science and Artificial Intelligence Laboratory (CSAIL),
+          which studies problems at the intersection of geometry, large-scale optimization, machine learning, and
+          applications. He joined MGGG's leadership in 2017 and is directing theoretical research and implementation
+          for algorithmic approaches to generating and analyzing districting plans.</dd>
+      </dl>
       <!-- </ul> -->
     </article>
   </main>
