--- a/resources.html
+++ b/resources.html
@@ -20,6 +20,9 @@
         <a href="resources.html">Resources</a>
       </li>
       <li>
+        <a href="who.html">Who We Are</a>
+      </li>
+      <li>
         <a href="donate.html">Donate</a>
       </li>
     </ul>
