--- a/who.html
+++ b/who.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Metric Geometry and Gerrymandering Group</title>
+  <title>Who We Are | Metric Geometry and Gerrymandering Group</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
