Add metadata to head

--- a/who.html
+++ b/who.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <title>Who We Are | Metric Geometry and Gerrymandering Group</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+  <meta name="description" content="A nonpartisan research organization studying applications of geometry and computing to U.S. redistricting.">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <title>Who We Are | Metric Geometry and Gerrymandering Group</title>
+  <link rel="stylesheet" type="text/css" media="screen" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900" rel="stylesheet">
 </head>
 
@@ -44,16 +46,12 @@
           <strong>Ruth Buck</strong> - part-time - geography
         </li> -->
       <dl class="bio-list">
-        <!-- <dt><img src="static/hully.jpg" alt="photo of Max Hully"></dt> -->
-        <!-- <dd><strong>Max Hully</strong> is the software developer for MGGG.</dd> -->
-
         <dt><img src="static/deford.jpg" alt="photo of Daryl DeFord"></dt>
         <dd><strong><a href="http://daryldeford.com">Daryl DeFord</a></strong> is a postdoc in the group,
           with research interests in complex networks and the mathematics of social data. He completed his Ph.D. in
           Mathematics in 2018 at Dartmouth College under the supervision of Dan Rockmore.</dd>
 
         <dt><img src="static/duchin.jpg" alt="photo of Moon Duchin"></dt>
-
         <dd><strong><a href="https://mduchin.math.tufts.edu">Moon Duchin</a></strong> founded MGGG in 2016 to focus
           mathematical attention on redistricting.
           Her areas of mathematical expertise are in geometry,
@@ -62,16 +60,18 @@
           <a href="http://as.tufts.edu/sts/">STS</a>, and the
           <a href="http://tischcollege.tufts.edu">Tisch College of Civic Life</a>.</figcaption>
         </dd>
-        <dt><img src="static/kestigian.jpg" alt="photo of Aidan Kestigian"></dt>
 
+        <!-- <dt><img src="static/hully.png" alt="photo of Max Hully"></dt>
+        <dd><strong>Max Hully</strong> is the software developer for MGGG</dd> -->
+
+        <dt><img src="static/kestigian.jpg" alt="photo of Aidan Kestigian"></dt>
         <dd><strong><a href="https://aidankestigian.wordpress.com/">Aidan Kestigian</a></strong> is the program manager
           for MGGG, managing the group’s research, civic, and fundraising initiatives. Prior to working for MGGG, Aidan
           earned a PhD in Logic, Computation, and Methodology at Carnegie Mellon University and maintains research
           interests in voting theory and social & political philosophy.
         </dd>
 
-        <dt>
-          <img src="static/solomon.jpg" alt="photo of Justin Solomon"></dt>
+        <dt><img src="static/solomon.jpg" alt="photo of Justin Solomon"></dt>
         <dd><strong><a href="http://people.csail.mit.edu/jsolomon/">Justin Solomon</a></strong> leads the
           Geometric Data Processing Group in the MIT Computer Science and Artificial Intelligence Laboratory (CSAIL),
           which studies problems at the intersection of geometry, large-scale optimization, machine learning, and
