--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <title>Metric Geometry and Gerrymandering Group</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+  <meta name="description" content="A nonpartisan research organization studying applications of geometry and computing to U.S. redistricting.">
+  <link rel="canonical" href="https://www.mggg.org/">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <title>Metric Geometry and Gerrymandering Group</title>
+  <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Quattrocento" rel="stylesheet">
 </head>
 
