Update gitignore, add Ruth bio (pending approval)

--- a/who.html
+++ b/who.html
@@ -63,8 +63,7 @@
         </dd>
 
         <dt><img src="static/hully.png" alt="A photo of Max Hully"></dt>
-        <dd><strong>Max Hully</strong> is the software developer for MGGG, working to make tools for understanding
-          redistricting available to everyone.</dd>
+        <dd><strong>Max Hully</strong> is the software developer for MGGG.</dd>
 
         <dt><img src="static/kestigian.jpg" alt="A photo of Aidan Kestigian"></dt>
         <dd><strong><a href="https://aidankestigian.wordpress.com/">Aidan Kestigian</a></strong> is the program manager
