updated who with new image

--- a/who.html
+++ b/who.html
@@ -46,7 +46,7 @@
           <strong>Ruth Buck</strong> - part-time - geography
         </li> -->
       <dl class="bio-list">
-        <dt><img src="static/deford.jpg" alt="photo of Daryl DeFord"></dt>
+        <dt><img src="static/deford2.jpg" alt="photo of Daryl DeFord"></dt>
         <dd><strong><a href="http://daryldeford.com">Daryl DeFord</a></strong> is a postdoc in the group,
           with research interests in complex networks and the mathematics of social data. He completed his Ph.D. in
           Mathematics in 2018 at Dartmouth College under the supervision of Dan Rockmore.</dd>
