--- a/who.html
+++ b/who.html
@@ -61,9 +61,9 @@
           <a href="http://as.tufts.edu/sts/">STS</a>, and the
           <a href="http://tischcollege.tufts.edu">Tisch College of Civic Life</a>.
         </dd>
-
+        <!-- 
         <dt><img src="static/hully.png" alt="A photo of Max Hully"></dt>
-        <dd><strong>Max Hully</strong> is the software developer for MGGG.</dd>
+        <dd><strong>Max Hully</strong> is the software developer for MGGG.</dd> -->
 
         <dt><img src="static/kestigian.jpg" alt="A photo of Aidan Kestigian"></dt>
         <dd><strong><a href="https://aidankestigian.wordpress.com/">Aidan Kestigian</a></strong> is the program manager
