--- a/who.html
+++ b/who.html
@@ -61,13 +61,14 @@
           <a href="http://as.tufts.edu/sts/">STS</a>, and the
           <a href="http://tischcollege.tufts.edu">Tisch College of Civic Life</a>.
         </dd>
-        <!-- 
+
         <dt><img src="static/hully.png" alt="A photo of Max Hully"></dt>
-        <dd><strong>Max Hully</strong> is the software developer for MGGG.</dd> -->
+        <dd><strong>Max Hully</strong> is the software developer for MGGG, building open-source tools and web resources
+          to make understanding redistricting accessible to everyone.</dd>
 
         <dt><img src="static/kestigian.jpg" alt="A photo of Aidan Kestigian"></dt>
         <dd><strong><a href="https://aidankestigian.wordpress.com/">Aidan Kestigian</a></strong> is the program manager
-          for MGGG, managing the group’s research, civic, and fundraising initiatives. Prior to working for MGGG, Aidan
+          for MGGG, managing the group's research, civic, and fundraising initiatives. Prior to working for MGGG, Aidan
           earned a PhD in Logic, Computation, and Methodology at Carnegie Mellon University and maintains research
           interests in voting theory and social & political philosophy.
         </dd>
