Converted to a jekyll site!

--- a/index.html
+++ b/index.html
@@ -1,95 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="A nonpartisan research organization studying applications of geometry and computing to U.S. redistricting.">
-  <link rel="canonical" href="https://www.mggg.org/">
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-  <title>Metric Geometry and Gerrymandering Group</title>
-  <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Quattrocento" rel="stylesheet">
-</head>
-
-<body>
-  <nav>
-    <ul class="nav-links">
-      <li>
-        <a href="index.html">About MGGG</a>
-      </li>
-      <li>
-        <a href="resources.html">Resources</a>
-      </li>
-      <li>
-        <a href="who.html">Who We Are</a>
-      </li>
-      <li>
-        <a href="donate.html">Donate</a>
-      </li>
-    </ul>
-  </nav>
-  <header>
-    <a href="/">
-      <img class="logo" src="/static/logo.svg" alt="Metric Geometry and Gerrymandering Group">
-    </a>
-    <h1><a href="/">
-        Metric Geometry and Gerrymandering Group</a></h1>
-  </header>
-
-  <main class="two-column">
-    <article>
-      <!-- <h2 class="headline"></h2> -->
-      <p>
-        The <strong>Metric Geometry and Gerrymandering Group (MGGG)</strong> is a Boston-based working
-        group led by Moon Duchin of Tufts University and Justin Solomon of MIT.
-        Our mission is to study applications of geometry and computing to U.S. redistricting.
-        We believe that gerrymandering of all kinds is a fundamental threat to our democracy.
-      </p>
-      <p>
-        Our goals are:
-      </p>
-      <ul>
-        <li>to pursue cutting-edge <strong>research</strong> in the basic science and
-          practically relevant applications of geometry,
-          topology, and computing to the redistricting problem;</li>
-        <li>to build open-source <strong>tools and resources</strong> that create public access and analytical power
-          for better understanding districts and their consequences;</li>
-        <li>to partner with <strong>civil rights</strong> organizations to reexamine and strengthen the
-          quantitative toolkit for protecting voting rights;</li>
-        <li>to offer formal and informal expert <strong>consulting</strong> to stakeholders on all sides.</li>
-      </ul>
-    </article>
-    <div>
-      <article class="feature">
-        <a href="/metagraph/">
-          <h2>Welcome to Gridlandia!</h2>
-          <summary>An interactive introduction to the math of redistricting.</summary>
-          <img src="/static/gridlandia.svg" alt="Metagraph of a 4x4 grid">
-        </a>
-      </article>
-    </div>
-    <p class="support">The Metric Geometry and Gerrymandering Group is a nonpartisan research organization.
-      MGGG has major support from the <a href="https://tischcollege.tufts.edu/">Jonathan M. Tisch
-        College of Civic Life</a> at Tufts University and the <a href="https://bosefellows.mit.edu/">Amar G.
-        Bose Research Grant Program</a> at MIT and an active partnership with the <a href="https://lawyescommittee.org/">Lawyers'
-        Committee for Civil Rights Under Law</a>.
+---
+layout: default
+order: 1
+title: About MGGG
+---
+<main class="two-column">
+  <article>
+    <p>
+      The <strong>Metric Geometry and Gerrymandering Group (MGGG)</strong> is a Boston-based working
+      group led by Moon Duchin of Tufts University and Justin Solomon of MIT.
+      Our mission is to study applications of geometry and computing to U.S. redistricting.
+      We believe that gerrymandering of all kinds is a fundamental threat to our democracy.
     </p>
-  </main>
-
-  <footer>
-    <ul class="footer-items">
-      <li class="copyright">
-        &#169; 2018 Metric Geometry and Gerrymandering Group
-      </li>
-      <li>
-        <address>
-          <a href="mailto:gerrymandr@gmail.com">gerrymandr@gmail.com</a>
-        </address>
-      </li>
+    <p>
+      Our goals are these:
+    </p>
+    <ul>
+      <li>to pursue cutting-edge <strong>research</strong> in the basic science and
+        practically relevant applications of geometry,
+        topology, and computing to the redistricting problem;</li>
+      <li>to build open-source <strong>tools and resources</strong> that create public access and analytical power
+        for better understanding districts and their consequences;</li>
+      <li>to partner with <strong>civil rights</strong> organizations to reexamine and strengthen the
+        quantitative toolkit for protecting voting rights;</li>
+      <li>to offer formal and informal expert <strong>consulting</strong> to stakeholders on all sides.</li>
     </ul>
-  </footer>
-</body>
-
-</html>
+  </article>
+  <div>
+    <article class="feature">
+      <a href="/metagraph/">
+        <h2>Welcome to Gridlandia!</h2>
+        <summary>An interactive introduction to the math of redistricting.</summary>
+        <img src="/static/gridlandia.svg" alt="Metagraph of a 4x4 grid">
+      </a>
+    </article>
+  </div>
+  <p class="support">The Metric Geometry and Gerrymandering Group is a nonpartisan research organization.
+    MGGG has major support from the <a href="https://tischcollege.tufts.edu/">Jonathan M. Tisch
+      College of Civic Life</a> at Tufts University and the <a href="https://bosefellows.mit.edu/">Amar G.
+      Bose Research Grant Program</a> at MIT and an active partnership with the <a href="https://lawyescommittee.org/">Lawyers'
+      Committee for Civil Rights Under Law</a>.
+  </p>
+</main>
