--- a/donate.html
+++ b/donate.html
@@ -1,108 +1,59 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+layout: default
+title: Donate
+order: 4
+---
+<main>
+  <article>
+    <h2 class="headline">Donate</h2>
+    <h3>The Metric Geometry and Gerrymandering Group (MGGG) will use donations to support its
+      multidisciplinary work
+      on geometric aspects of redistricting.</h3>
+    <figure class="donate">
+      <a href="https://tuftsgiving.org/giving-form.html?id=1&amp;showarea=AR000823&amp;areaid=343" target="_blank">
+        <h3>Donate to MGGG!</h3>
+      </a>
+    </figure>
+    <p>MGGG is based at Tufts and so our fundraising goes through the university. The link above will take
+      you to the
+      standard Tufts donation page, with "Geometry of Redistricting" pre-selected as the area of giving.
+      Donations
+      are tax-deductible, and the university takes no overhead: <strong>every dollar goes directly to
+        MGGG</strong>.
+      Please ignore the Tufts-specific questions.</p>
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="A nonpartisan research organization studying applications of geometry and computing to U.S. redistricting.">
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-  <title>Donate | Metric Geometry and Gerrymandering Group</title>
-  <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900" rel="stylesheet">
-</head>
-
-<body>
-  <nav>
-    <ul class="nav-links">
-      <li>
-        <a href="index.html">About MGGG</a>
-      </li>
-      <li>
-        <a href="resources.html">Resources</a>
-      </li>
-      <li>
-        <a href="who.html">Who We Are</a>
-      </li>
-      <li>
-        <a href="donate.html">Donate</a>
-      </li>
+    <p><em>The small print:</em> Funding will be used for ongoing activities of the MGGG, which may include
+      the
+      following.</p>
+    <ul>
+      <li><strong>Research:</strong> Design and study of mathematical methodologies that can distinguish
+        between
+        gerrymandered and non-gerrymandered districts; statistical evaluation of models used to analyze
+        existing and
+        proposed districts; design of algorithms and software to visualize and quantify effects of
+        gerrymandering;
+        supplies and equipment for the above.</li>
+      <li><strong>Outreach:</strong> Travel associated with speaking engagements on MGGG research
+        projects and
+        apportionment/redistricting more generally; generation and dissemination of K-12 and
+        undergraduate
+        educational materials related to the mathematical, political, and social implications of
+        gerrymandering.</li>
+      <li><strong>Events:</strong> Conferences and gatherings to promote research and public awareness of
+        mathematical aspects of redistricting, including informational materials for attendees,
+        honoraria for
+        speakers, and expenses of invited participants.</li>
+      <li><strong>Consulting:</strong> Expert witnessing, scientific/GIS-based evidence collection, and
+        other
+        activities to support legal cases and civic projects for which the geometry of gerrymandering
+        may be
+        relevant.</li>
     </ul>
-  </nav>
-  <header>
-    <a href="/">
-      <img class="logo" src="/static/logo.svg" alt="Metric Geometry and Gerrymandering Group">
-    </a>
-    <h1><a href="/">
-        Metric Geometry and Gerrymandering Group</a></h1>
-  </header>
-  <main>
-    <article>
-      <h2 class="headline">Donate</h2>
-      <h3>The Metric Geometry and Gerrymandering Group (MGGG) will use donations to support its
-        multidisciplinary work
-        on geometric aspects of redistricting.</h3>
-      <figure class="donate">
-        <a href="https://tuftsgiving.org/giving-form.html?id=1&amp;showarea=AR000823&amp;areaid=343" target="_blank">
-          <h3>Donate to MGGG!</h3>
-        </a>
-      </figure>
-      <p>MGGG is based at Tufts and so our fundraising goes through the university. The link above will take
-        you to the
-        standard Tufts donation page, with "Geometry of Redistricting" pre-selected as the area of giving.
-        Donations
-        are tax-deductible, and the university takes no overhead: <strong>every dollar goes directly to
-          MGGG</strong>.
-        Please ignore the Tufts-specific questions.</p>
+    <p><em>The MGGG is a non-partisan group dedicated to promoting fair electoral practices. While we may
+        participate
+        in cases brought or defended by partisan entities, donations will support the activities
+        proposed above and
+        should not be understood as aligning with a particular political party, cause, or organization.</em></p>
 
-      <p><em>The small print:</em> Funding will be used for ongoing activities of the MGGG, which may include
-        the
-        following.</p>
-      <ul>
-        <li><strong>Research:</strong> Design and study of mathematical methodologies that can distinguish
-          between
-          gerrymandered and non-gerrymandered districts; statistical evaluation of models used to analyze
-          existing and
-          proposed districts; design of algorithms and software to visualize and quantify effects of
-          gerrymandering;
-          supplies and equipment for the above.</li>
-        <li><strong>Outreach:</strong> Travel associated with speaking engagements on MGGG research
-          projects and
-          apportionment/redistricting more generally; generation and dissemination of K-12 and
-          undergraduate
-          educational materials related to the mathematical, political, and social implications of
-          gerrymandering.</li>
-        <li><strong>Events:</strong> Conferences and gatherings to promote research and public awareness of
-          mathematical aspects of redistricting, including informational materials for attendees,
-          honoraria for
-          speakers, and expenses of invited participants.</li>
-        <li><strong>Consulting:</strong> Expert witnessing, scientific/GIS-based evidence collection, and
-          other
-          activities to support legal cases and civic projects for which the geometry of gerrymandering
-          may be
-          relevant.</li>
-      </ul>
-      <p><em>The MGGG is a non-partisan group dedicated to promoting fair electoral practices. While we may
-          participate
-          in cases brought or defended by partisan entities, donations will support the activities
-          proposed above and
-          should not be understood as aligning with a particular political party, cause, or organization.</em></p>
-
-    </article>
-  </main>
-
-  <footer>
-    <ul class="footer-items">
-      <li class="copyright">
-        &#169; 2018 Metric Geometry and Gerrymandering Group
-      </li>
-      <li>
-        <address>
-          <a href="mailto:gerrymandr@gmail.com">gerrymandr@gmail.com</a>
-        </address>
-      </li>
-    </ul>
-  </footer>
-</body>
-
-</html>
+  </article>
+</main>
