--- a/who.html
+++ b/who.html
@@ -29,7 +29,8 @@ order: 2
 
       <dt><img src="static/hully.png" alt="A photo of Max Hully"></dt>
       <dd><strong>Max Hully</strong> is the software developer for MGGG, building open-source tools and web resources
-        to make understanding redistricting accessible to everyone.</dd>
+        to make understanding redistricting accessible to everyone. He is on leave from doctoral work in discrete
+        geometry and algebraic combinatorics at UMass Amherst.</dd>
 
       <dt><img src="static/kestigian.jpg" alt="A photo of Aidan Kestigian"></dt>
       <dd><strong><a href="https://aidankestigian.wordpress.com/">Aidan Kestigian</a></strong> is the program manager
