--- a/who.html
+++ b/who.html
@@ -39,6 +39,12 @@ order: 2
         interests in voting theory and social & political philosophy.
       </dd>
 
+      <dt><img src="static/nieh.jpg" alt="A photo of Ari Nieh"></dt>
+      <dd><strong>Ari Nieh</strong> was a founding member of MGGG in 2016, specializing in mathematics
+        pedagogy and communication. He developed and presented materials on gerrymandering and geometry at our Educator
+        Training sessions around the country in 2017-18. He is a co-editor on the MGGG book project tentatively called
+        Political Geometry.</dd>
+
       <dt><img src="static/solomon.jpg" alt="A photo of Justin Solomon"></dt>
       <dd><strong><a href="http://people.csail.mit.edu/jsolomon/">Justin Solomon</a></strong> leads the
         Geometric Data Processing Group in the MIT Computer Science and Artificial Intelligence Laboratory (CSAIL),
