--- a/table.html
+++ b/table.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="A nonpartisan research organization studying applications of geometry and computing to U.S. redistricting.">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-  <title>The Known Sizes of Grid Metagraphs | Metric Geometry and Gerrymandering Group</title>
+  <title>The Known Sizes of Grid Metagraphs - Metric Geometry and Gerrymandering Group</title>
   <link rel="stylesheet" href="/static/table.css">
 </head>
 
