--- a/donate.html
+++ b/donate.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Donate
+nav: true
 order: 4
 ---
 <main>
@@ -10,25 +11,32 @@ order: 4
       multidisciplinary work
       on geometric aspects of redistricting.</h3>
     <figure class="donate">
-      <a href="https://tuftsgiving.org/giving-form.html?id=1&amp;showarea=AR000823&amp;areaid=343" target="_blank">
+      <a href="https://tuftsgiving.org/giving-form.html?id=1&amp;showarea=AR000823&amp;areaid=343"
+        target="_blank">
         <h3>Donate to MGGG!</h3>
       </a>
     </figure>
-    <p>MGGG is based at Tufts and so our fundraising goes through the university. The link above will take
+    <p>MGGG is based at Tufts and so our fundraising goes through the university. The link above
+      will take
       you to the
-      standard Tufts donation page, with "Geometry of Redistricting" pre-selected as the area of giving.
+      standard Tufts donation page, with "Geometry of Redistricting" pre-selected as the area of
+      giving.
       Donations
-      are tax-deductible, and the university takes no overhead: <strong>every dollar goes directly to
+      are tax-deductible, and the university takes no overhead: <strong>every dollar goes directly
+        to
         MGGG</strong>.
       Please ignore the Tufts-specific questions.</p>
 
-    <p><em>The small print:</em> Funding will be used for ongoing activities of the MGGG, which may include
+    <p><em>The small print:</em> Funding will be used for ongoing activities of the MGGG, which may
+      include
       the
       following.</p>
     <ul>
-      <li><strong>Research:</strong> Design and study of mathematical methodologies that can distinguish
+      <li><strong>Research:</strong> Design and study of mathematical methodologies that can
+        distinguish
         between
-        gerrymandered and non-gerrymandered districts; statistical evaluation of models used to analyze
+        gerrymandered and non-gerrymandered districts; statistical evaluation of models used to
+        analyze
         existing and
         proposed districts; design of algorithms and software to visualize and quantify effects of
         gerrymandering;
@@ -39,21 +47,26 @@ order: 4
         undergraduate
         educational materials related to the mathematical, political, and social implications of
         gerrymandering.</li>
-      <li><strong>Events:</strong> Conferences and gatherings to promote research and public awareness of
+      <li><strong>Events:</strong> Conferences and gatherings to promote research and public
+        awareness of
         mathematical aspects of redistricting, including informational materials for attendees,
         honoraria for
         speakers, and expenses of invited participants.</li>
-      <li><strong>Consulting:</strong> Expert witnessing, scientific/GIS-based evidence collection, and
+      <li><strong>Consulting:</strong> Expert witnessing, scientific/GIS-based evidence collection,
+        and
         other
-        activities to support legal cases and civic projects for which the geometry of gerrymandering
+        activities to support legal cases and civic projects for which the geometry of
+        gerrymandering
         may be
         relevant.</li>
     </ul>
-    <p><em>The MGGG is a non-partisan group dedicated to promoting fair electoral practices. While we may
+    <p><em>The MGGG is a non-partisan group dedicated to promoting fair electoral practices. While
+        we may
         participate
         in cases brought or defended by partisan entities, donations will support the activities
         proposed above and
-        should not be understood as aligning with a particular political party, cause, or organization.</em></p>
+        should not be understood as aligning with a particular political party, cause, or
+        organization.</em></p>
 
   </article>
 </main>
