--- a/donate.html
+++ b/donate.html
@@ -27,7 +27,8 @@ order: 4
         MGGG</strong>.
       Please ignore the Tufts-specific questions.</p>
 
-    <p><em>The small print:</em> Funding will be used for ongoing activities of the MGGG, which may
+    <h3>The small print</h3>
+    <p>Funding will be used for ongoing activities of the MGGG, which may
       include
       the
       following.</p>
@@ -60,13 +61,14 @@ order: 4
         may be
         relevant.</li>
     </ul>
-    <p><em>The MGGG is a non-partisan group dedicated to promoting fair electoral practices. While
-        we may
-        participate
-        in cases brought or defended by partisan entities, donations will support the activities
-        proposed above and
-        should not be understood as aligning with a particular political party, cause, or
-        organization.</em></p>
+    <p class="support">The MGGG is a non-partisan group dedicated to promoting fair electoral
+      practices. While
+      we may
+      participate
+      in cases brought or defended by partisan entities, donations will support the activities
+      proposed above and
+      should not be understood as aligning with a particular political party, cause, or
+      organization.</p>
 
   </article>
 </main>
