Switch to serif in test

--- a/4a9504184bf3test.html
+++ b/4a9504184bf3test.html
@@ -32,9 +32,7 @@
       <li><a href="/donate.html">Donate</a></li>
     </ul>
   </nav>
-
-
-  <main style="padding-top: 2rem">
+  <main style="padding-top: 2rem;; font-family: Quattrocento">
     <article>
       <h2 class="headline">Who We Are</h2>
       <dl class="bio-list">
