--- a/4a9504184bf3test.html
+++ b/4a9504184bf3test.html
@@ -32,7 +32,7 @@
       <li><a href="/donate.html">Donate</a></li>
     </ul>
   </nav>
-  <main style="padding-top: 2rem;; font-family: Quattrocento">
+  <main style="padding-top: 2rem;; font-family: Quattrocento; box-shadow: 0 -15px 10px -20px rgba(0, 0, 0, 0.3);">
     <article>
       <h2 class="headline">Who We Are</h2>
       <dl class="bio-list">
