Change non-home page layouts to have smaller header

--- a/donate.html
+++ b/donate.html
@@ -4,71 +4,68 @@ title: Donate
 nav: true
 order: 4
 ---
-<main>
-  <article>
-    <h2 class="headline">Donate</h2>
-    <h3>The Metric Geometry and Gerrymandering Group (MGGG) will use donations to support its
-      multidisciplinary work
-      on geometric aspects of redistricting.</h3>
-    <figure class="donate">
-      <a href="https://tuftsgiving.org/giving-form.html?id=1&amp;showarea=AR000823&amp;areaid=343"
-        target="_blank">
-        <h3>Donate to MGGG!</h3>
-      </a>
-    </figure>
-    <p>MGGG is based at Tufts and so our fundraising goes through the university. The link above
-      will take
-      you to the
-      standard Tufts donation page, with "Geometry of Redistricting" pre-selected as the area of
-      giving.
-      Donations
-      are tax-deductible, and the university takes no overhead: <strong>every dollar goes directly
-        to
-        MGGG</strong>.
-      Please ignore the Tufts-specific questions.</p>
+<article>
+  <h1>Donate</h1>
+  <h3>The Metric Geometry and Gerrymandering Group (MGGG) will use donations to support its
+    multidisciplinary work
+    on geometric aspects of redistricting.</h3>
+  <figure class="donate">
+    <a href="https://tuftsgiving.org/giving-form.html?id=1&amp;showarea=AR000823&amp;areaid=343"
+      target="_blank">
+      <h3>Donate to MGGG!</h3>
+    </a>
+  </figure>
+  <p>MGGG is based at Tufts and so our fundraising goes through the university. The link above
+    will take
+    you to the
+    standard Tufts donation page, with "Geometry of Redistricting" pre-selected as the area of
+    giving.
+    Donations
+    are tax-deductible, and the university takes no overhead: <strong>every dollar goes directly
+      to
+      MGGG</strong>.
+    Please ignore the Tufts-specific questions.</p>
 
-    <h3>The small print</h3>
-    <p>Funding will be used for ongoing activities of the MGGG, which may
-      include
-      the
-      following.</p>
-    <ul>
-      <li><strong>Research:</strong> Design and study of mathematical methodologies that can
-        distinguish
-        between
-        gerrymandered and non-gerrymandered districts; statistical evaluation of models used to
-        analyze
-        existing and
-        proposed districts; design of algorithms and software to visualize and quantify effects of
-        gerrymandering;
-        supplies and equipment for the above.</li>
-      <li><strong>Outreach:</strong> Travel associated with speaking engagements on MGGG research
-        projects and
-        apportionment/redistricting more generally; generation and dissemination of K-12 and
-        undergraduate
-        educational materials related to the mathematical, political, and social implications of
-        gerrymandering.</li>
-      <li><strong>Events:</strong> Conferences and gatherings to promote research and public
-        awareness of
-        mathematical aspects of redistricting, including informational materials for attendees,
-        honoraria for
-        speakers, and expenses of invited participants.</li>
-      <li><strong>Consulting:</strong> Expert witnessing, scientific/GIS-based evidence collection,
-        and
-        other
-        activities to support legal cases and civic projects for which the geometry of
-        gerrymandering
-        may be
-        relevant.</li>
-    </ul>
-    <p class="support">The MGGG is a non-partisan group dedicated to promoting fair electoral
-      practices. While
-      we may
-      participate
-      in cases brought or defended by partisan entities, donations will support the activities
-      proposed above and
-      should not be understood as aligning with a particular political party, cause, or
-      organization.</p>
-
-  </article>
-</main>
+  <h3>The small print</h3>
+  <p>Funding will be used for ongoing activities of the MGGG, which may
+    include
+    the
+    following.</p>
+  <ul>
+    <li><strong>Research:</strong> Design and study of mathematical methodologies that can
+      distinguish
+      between
+      gerrymandered and non-gerrymandered districts; statistical evaluation of models used to
+      analyze
+      existing and
+      proposed districts; design of algorithms and software to visualize and quantify effects of
+      gerrymandering;
+      supplies and equipment for the above.</li>
+    <li><strong>Outreach:</strong> Travel associated with speaking engagements on MGGG research
+      projects and
+      apportionment/redistricting more generally; generation and dissemination of K-12 and
+      undergraduate
+      educational materials related to the mathematical, political, and social implications of
+      gerrymandering.</li>
+    <li><strong>Events:</strong> Conferences and gatherings to promote research and public
+      awareness of
+      mathematical aspects of redistricting, including informational materials for attendees,
+      honoraria for
+      speakers, and expenses of invited participants.</li>
+    <li><strong>Consulting:</strong> Expert witnessing, scientific/GIS-based evidence collection,
+      and
+      other
+      activities to support legal cases and civic projects for which the geometry of
+      gerrymandering
+      may be
+      relevant.</li>
+  </ul>
+  <p class="support">The MGGG is a non-partisan group dedicated to promoting fair electoral
+    practices. While
+    we may
+    participate
+    in cases brought or defended by partisan entities, donations will support the activities
+    proposed above and
+    should not be understood as aligning with a particular political party, cause, or
+    organization.</p>
+</article>
