--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
-layout: default
+layout: home
 title: About MGGG
 nav: true
 order: 1
 ---
-<main class="two-column">
+<main class="two-column home">
   <article>
     <p>
       The <strong>Metric Geometry and Gerrymandering Group (MGGG)</strong> is a Boston-based
