--- a/table.html
+++ b/table.html
@@ -6,9 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="A nonpartisan research organization studying applications of geometry and computing to U.S. redistricting.">
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico">
+  <link rel="canonical" href="https://www.mggg.org/table.html">
   <title>The Known Sizes of Grid Metagraphs - Metric Geometry and Gerrymandering Group</title>
-  <link rel="stylesheet" href="/static/table.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="static/style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Source+Sans+Pro:300,400"
+    rel="stylesheet">
 </head>
 
 <body>
