--- a/table.html
+++ b/table.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico">
   <link rel="canonical" href="https://www.mggg.org/table.html">
   <title>The Known Sizes of Grid Metagraphs - Metric Geometry and Gerrymandering Group</title>
-  <link rel="stylesheet" type="text/css" media="screen" href="static/style.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="static/table.css" />
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Source+Sans+Pro:300,400"
     rel="stylesheet">
 </head>
