--- a/index.html
+++ b/index.html
@@ -4,45 +4,47 @@ title: About MGGG
 nav: true
 order: 1
 ---
-<main class="two-column home">
-  <article>
-    <p>
-      The <strong>Metric Geometry and Gerrymandering Group (MGGG)</strong> is a Boston-based
-      working
-      group led by Moon Duchin of Tufts University and Justin Solomon of MIT.
-      Our mission is to study applications of geometry and computing to U.S. redistricting.
-      We believe that gerrymandering of all kinds is a fundamental threat to our democracy.
-    </p>
-    <p>
-      Our goals are these:
-    </p>
-    <ul>
-      <li>to pursue cutting-edge <strong>research</strong> in the basic science and
-        practically relevant applications of geometry,
-        topology, and computing to the redistricting problem;</li>
-      <li>to build open-source <strong>tools and resources</strong> that create public access and
-        analytical power
-        for better understanding districts and their consequences;</li>
-      <li>to partner with <strong>civil rights</strong> organizations to reexamine and strengthen
-        the
-        quantitative toolkit for protecting voting rights;</li>
-      <li>to offer formal and informal expert <strong>consulting</strong> to stakeholders on all
-        sides.</li>
-    </ul>
-  </article>
-  <div>
-    <article class="feature">
-      <a href="/metagraph/">
-        <h2>Welcome to Gridlandia!</h2>
-        <summary>An interactive introduction to the math of redistricting.</summary>
-        <img src="/static/gridlandia.svg" alt="Metagraph of a 4x4 grid">
-      </a>
+<main class="home">
+  <div class="two-column">
+    <article>
+      <p>
+        The <strong>Metric Geometry and Gerrymandering Group (MGGG)</strong> is a Boston-based
+        working
+        group led by Moon Duchin of Tufts University and Justin Solomon of MIT.
+        Our mission is to study applications of geometry and computing to U.S. redistricting.
+        We believe that gerrymandering of all kinds is a fundamental threat to our democracy.
+      </p>
+      <p>
+        Our goals are these:
+      </p>
+      <ul>
+        <li>to pursue cutting-edge <strong>research</strong> in the basic science and
+          practically relevant applications of geometry,
+          topology, and computing to the redistricting problem;</li>
+        <li>to build open-source <strong>tools and resources</strong> that create public access and
+          analytical power
+          for better understanding districts and their consequences;</li>
+        <li>to partner with <strong>civil rights</strong> organizations to reexamine and strengthen
+          the
+          quantitative toolkit for protecting voting rights;</li>
+        <li>to offer formal and informal expert <strong>consulting</strong> to stakeholders on all
+          sides.</li>
+      </ul>
     </article>
+    <div>
+      <article class="feature">
+        <a href="/metagraph/">
+          <h2>Welcome to Gridlandia!</h2>
+          <summary>An interactive introduction to the math of redistricting.</summary>
+          <img src="/static/gridlandia.svg" alt="Metagraph of a 4x4 grid">
+        </a>
+      </article>
+    </div>
+    <p class="support">The Metric Geometry and Gerrymandering Group is a nonpartisan research
+      organization. MGGG has major support from the <a href="https://tischcollege.tufts.edu/">Jonathan
+        M. Tisch College of Civic Life</a> at Tufts University and the <a href="https://bosefellows.mit.edu/">Amar
+        G. Bose Research Grant Program</a> at MIT and an active partnership with the
+      <a href="https://lawyescommittee.org/">Lawyers' Committee for Civil Rights Under Law</a>.
+    </p>
   </div>
-  <p class="support">The Metric Geometry and Gerrymandering Group is a nonpartisan research
-    organization. MGGG has major support from the <a href="https://tischcollege.tufts.edu/">Jonathan
-      M. Tisch College of Civic Life</a> at Tufts University and the <a href="https://bosefellows.mit.edu/">Amar
-      G. Bose Research Grant Program</a> at MIT and an active partnership with the
-    <a href="https://lawyescommittee.org/">Lawyers' Committee for Civil Rights Under Law</a>.
-  </p>
 </main>
