De-headline donate text

--- a/donate.html
+++ b/donate.html
@@ -6,12 +6,11 @@ order: 4
 ---
 <article>
   <h1>Donate</h1>
-  <h3>The Metric Geometry and Gerrymandering Group (MGGG) will use donations to support its
+  <p>The Metric Geometry and Gerrymandering Group (MGGG) will use donations to support its
     multidisciplinary work
-    on geometric aspects of redistricting.</h3>
+    on geometric aspects of redistricting.</p>
   <figure class="donate">
-    <a href="https://tuftsgiving.org/giving-form.html?id=1&amp;showarea=AR000823&amp;areaid=343"
-      target="_blank">
+    <a href="https://tuftsgiving.org/giving-form.html?id=1&showarea=AR000823&areaid=343" target="_blank">
       <h3>Donate to MGGG!</h3>
     </a>
   </figure>
@@ -24,7 +23,7 @@ order: 4
     are tax-deductible, and the university takes no overhead: <strong>every dollar goes directly
       to
       MGGG</strong>.
-    Please ignore the Tufts-specific questions.</p>
+    Please feel free to ignore the Tufts-specific questions.</p>
 
   <h3>The small print</h3>
   <p>Funding will be used for ongoing activities of the MGGG, which may
